--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
