--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
-node_modules/
-package-lock.json
-
-#Env
+# Root directory
+server.js
 .env
 
-#Functions
+
+
+
+# Functions
 functions/node_modules/
-functions/package-lock.json
 functions/ui-debug.log
 
-#Firebase
+# Firebase
 fb/firebase_key.json
+fb/firebaseConfig.mjs
+fb/validationUtils.mjs
+fb/dbUtils.mjs
+# Debug
+firestore-debug.log
+ui-debug.log
+
