--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,12 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "react-native-device-info": "^10.12.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
