--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2024.1
 whitenoise==6.6.0
-django-cors-header==3.5.0
+django-cors-headers==4.3.1
